tests/NormalTests/paczka1/fuzzy1/73546435.err
Error in line 1: m78UGbvbQAw S779 79,1
Error in line 10: m78UGbvbQAw A954 99,8
Error in line 27: A954 S820 31,1
Error in line 32: JqP44pc S964 219,35
Error in line 22: JqP44pc S964 44,7
Error in line 35: ge8M S779 12,0
